--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-flip-card": "^3.5.6",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-reanimated": "~1.7.0",
+    "react-native-root-toast": "^3.2.1",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
     "react-native-view-overflow": "0.0.5",
